[package]
name = "rekko"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
async-stream = "0.3.3"
futures-core = "0.3.21"
futures-util = "0.3.21"
h2 = "0.3.13"
hdrhistogram = "7.5.0"
prost = "0.10.4"
tokio = { version = "1.20.0", features = ["full"] }
tokio-stream = "0.1.9"
tonic = "0.7.2"

[build-dependencies]
tonic-build = "0.7.2"
